# AmbientAurora

./: .gitignore  CMakeLists.txt  README.md
docs/: performance-issues-analysis.md
src/: main.cpp  mainTest.cpp
src/core/: Application.cpp  Application.h  Color.cpp  Color.h  ColorAnimator.cpp  ColorAnimator.h  TransitionManager.cpp  TransitionManager.h  TransitionMode.h  Types.h
src/lighting/: AuroraMode.cpp  AuroraMode.h  DynamicMode.cpp  DynamicMode.h  GradientMode.cpp  GradientMode.h  ILightingMode.h  LightingManager.cpp  LightingManager.h  SampleMode.cpp  SampleMode.h  StaticMode.cpp  StaticMode.h
src/render/: ScreenRenderer.cpp  ScreenRenderer.h  ScreenRenderer_old.cpp
src/render/glad/: glad.c  glad.h
src/ui/: AuroraItem.cpp  AuroraItem.h  AuroraRenderer.cpp  AuroraRenderer.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  TestPanel.qml
src/ui/qml/: BottomBar.qml  GlassPanel.qml  LogoButton.qml  MainUI.qml
src/ui/qml/panels/: AdvancedPanel.qml  ColorPanel.qml  SliderPanel.qml
